--- a/Groundhog/bin/epona.properties
+++ b/Groundhog/bin/epona.properties
@@ -1,14 +1,15 @@
 # The path of projects name file
-epona.projectsnames_path=C:/Epona/AnaliseDetalhada/projectsNames.txt
+epona.projectsnames_path=/home/weslley/naodatada.txt
 
 #CrawProjectsName rootFolder
 #epona.CrawlProjectsNames.root=C:/Epona/logsGPCE/logs/
 #epona.CrawlProjectsNames.root=C:/novosLogsCorrigidos/
-epona.CrawlProjectsNames.root=C:/Epona/AnaliseDetalhada/LogsAnaliseDetalhada/
+#epona.CrawlProjectsNames.root=/home/wst/groundhog/LogProjetos2012/
+epona.CrawlProjectsNames.root=/home/weslley/testando
 
 #Storage Folder for colected projects
 #epona.ProjectcsStorageFolder=/Users/Filipe/Documents/IC/temp/EponaCollectedProjects
-epona.ProjectcsStorageFolder=C:/Projects/
+epona.ProjectcsStorageFolder=/home/weslley/testando
 
 #Storage Folder for uncompressed projects
 epona.ProjectcsUncompressedFolder=C:/temp/Epona/EponaUncompressedProjects/
