--- a/Groundhog/bin/epona.properties
+++ b/Groundhog/bin/epona.properties
@@ -1,11 +1,13 @@
 # The path of projects name file
-epona.projectsnames_path=/home/weslley/naodatada.txt
+#epona.projectsnames_path=/home/wst/groundhog/projectsNames2015.txt
+epona.projectsnames_path=/home/weslley/ArtigoGroundHog2015/projectsNames2015.txt
 
 #CrawProjectsName rootFolder
 #epona.CrawlProjectsNames.root=C:/Epona/logsGPCE/logs/
 #epona.CrawlProjectsNames.root=C:/novosLogsCorrigidos/
-#epona.CrawlProjectsNames.root=/home/wst/groundhog/LogProjetos2012/
-epona.CrawlProjectsNames.root=/home/weslley/testando
+#epona.CrawlProjectsNames.root=/home/wst/groundhog/LogProjetos2015/
+epona.CrawlProjectsNames.root=/home/weslley/ArtigoGroundHog2015/LogProjetos2015/
+#epona.CrawlProjectsNames.root=/home/weslley/testando
 
 #Storage Folder for colected projects
 #epona.ProjectcsStorageFolder=/Users/Filipe/Documents/IC/temp/EponaCollectedProjects
